# fizzy

./: Cargo.toml  sample.fizz
src/: compiler.rs  lib.rs  main.rs  parser.rs
