[package]
name = "fizzy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
ariadne = "0.1.5"
chumsky = "0.8.0"
clap = { version = "3.1.18", features = ["derive"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
once_cell = "1.10.0"
thiserror = "1.0.30"

[dev-dependencies]
pretty_assertions = "1.2.0"
